--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -11,7 +11,7 @@ on:
 
 jobs:
   test:
-    if: ${{ github.base_ref == main }}
+    if: ${{ github.base_ref == 'main' }}
     strategy:
       matrix:
         go-version: [1.11.6, 1.16.x, 1.17.x]
